--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
             font-family: sans-serif;
 
         }
+        .menu{
+            background: none;
+            border: none;
+            font-size: 32px;
+        }
+        .h2_title{
+            font-size: 4.2rem;
+        }
+        .p_title{
+            font-size: 1.5rem;
+            font-weight: lighter;
+        }
         .ddd2{
             position: relative;
             width: 100%;
@@ -48,12 +60,11 @@
         height: 790px;
         }
         .lend_desc{
-            width: 480px;
+            width: 800px;
             margin-top: 12vh;
             padding-left: 35px;
         height: inherit;
         color: white;
-        font-size: 1.4em;
         }
         .lending{
             display: flex;
@@ -136,15 +147,15 @@
 <body>
     <header>
         <a href="/" class="aaa_header"><h1>AndY Lemon</h1></a>
-<button onclick="alert('0_0')"><i class="fa-solid fa-bars"></i></button>
+<button class="menu" onclick="alert('0_0')"><i class="fa-solid fa-bars"></i></button>
     </header>
     <main>
         <section class="ddd">
             <div class="lending">
                 <div class="lend_pic"></div>
                 <div class="lend_desc">
-                    <h2>Будь сильнее, чем Губанов</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae doloremque itaque inventore voluptas necessitatibus eligendi nisi? Inventore at facere voluptates nulla sint eum, suscipit, quisquam adipisci reiciendis a necessitatibus.</p>
+                    <h2 class="h2_title">Будь сильнее, чем Губанов</h2>
+                    <p class="p_title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae doloremque itaque inventore voluptas necessitatibus eligendi nisi? Inventore at facere voluptates nulla sint eum, suscipit, quisquam adipisci reiciendis a necessitatibus.</p>
                     <i>Image from Mazepov</i>
                     <br>
                     <button class="big_btn" onclick="">Learn More</button>
