--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
             margin-top: 50px;
 
         }
+        .ddd7{
+            position: relative;
+            width: 100%;
+            height: 800px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            background-color: rgb(151, 151, 151);
+            margin-top: 50px;
+
+        }
+        .img322{
+            background-image: url(https://www.meme-arsenal.com/memes/118025d98c8a6b070d404f7578192b6a.jpg);
+            width: 520px;
+            height: 520px;
+            background-size: cover;
+        background-position: center;
+        }
         .bl1{
             position: relative;
             width: 50%;
@@ -90,6 +109,11 @@
             padding-right: 250px;
             padding-top: 50px;
 
+        }
+        .step{
+            width: 250px;
+            height: 250px;
+            background-color: aqua;
         }
         header{
             display: flex;
@@ -277,6 +301,16 @@
 
             }
         }
+        .ddd8{
+            position: relative;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -351,7 +385,10 @@
                 </div>
         </section>
         <section class="ddd6">
-            <div class="descr1337"></div>
+            <div class="descr1337">
+                <h2 style="color: white; font-size: 34pt; text-align: center;">Lorem, ipsum dolor.</h2>
+                <p style="color: #fff; font-size: 24pt; text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, deserunt?</p>
+            </div>
             <div class="grid_patrn">
                 <div class="item_p i1"></div>
                 <div class="item_p i2"></div>
@@ -361,6 +398,27 @@
                 <div class="item_p i6"></div>
             </div>
         </section>
+        <section class="ddd7">
+            <div class="steps">
+                <div class="step s1">
+                    <h2 style="text-align: center;">1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                </div>
+                <div class="step s2">
+                    <h2 style="text-align: center;">2</h2>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <div class="img322"></div>
+        </section>
+        <section class="ddd8">
+            <div class="llk">
+                <h2 style="font-size: 48pt;">Lorem ipsum dolor sit amet consectetur</h2>
+                <p style="font-size: 28pt;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque numquam praesentium recusandae.</p>
+                <button class="big_btn">Learn more</button>
+                </div>
+        </section>
+        <section class="ddd9"></section>
     </main>
 </body>
 </html>
