--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
             flex-direction: row;
             background-color: rgb(73, 73, 73);
         }
+        .inp{
+            width: 512px;
+            height: 64px;
+            font-size: 32pt;
+        }
+        
         .big_btn{
             margin-top: 35px;
             width: 190px;
@@ -415,10 +421,25 @@
             <div class="llk">
                 <h2 style="font-size: 48pt;">Lorem ipsum dolor sit amet consectetur</h2>
                 <p style="font-size: 28pt;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque numquam praesentium recusandae.</p>
-                <button class="big_btn">Learn more</button>
+                <button class="big_btn" style="margin-bottom: 25px;">Learn more</button>
                 </div>
         </section>
-        <section class="ddd9"></section>
+        <section class="ddd9">
+            <div class="lending">
+                <div class="lend_pic"></div>
+                <div class="lend_desc">
+                    <h2>Contact Us</h2>
+                    <form action="" method="post">
+                        <input type="text" class="name inp" placeholder="Ваше имя">
+                        <br>
+                        <input type="email" class="email inp" placeholder="Ваш email">
+                        <br>
+                        <input type="text" class="message inp" placeholder="ваше сообщение">
+                        <br>
+                        <button class="big_btn" onclick="">Send</button>
+                    </form>
+                    </div>
+        </section>
     </main>
 </body>
 </html>
