--- a/index.html
+++ b/index.html
@@ -290,6 +290,9 @@
             font-size: 28pt;
             font-weight:100;
         }
+        .lli{
+            padding-right: 35px;
+        }
 
         @media screen and (max-width : 1280px) {
             body{
@@ -391,6 +394,35 @@
             width: 72%;
 
         }
+        .ddd4{
+            margin-top: 50px;
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: center;
+            align-items: center;
+        }
+        .pic2{
+
+        width: 85%;
+        height: 400px;
+        margin: 25px;
+        }
+        .lli{
+            padding-right: 0;
+            font-size: 18pt;
+        }
+        .thh {
+    position: relative;
+    font-weight: bold;
+    font-size: 36px;
+    color: white;
+    top: 77%;
+    left: 4%;
+}
+
+.desc1 {
+    width: 85%;
+}
         }
 
     </style>
@@ -447,7 +479,7 @@
                 </span>
             </div>
             <div class="desc1">
-                <p style="font-size: 28pt; color: white; padding-right: 35px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quibusdam obcaecati cumque, doloremque inventore possimus consequuntur!</p>
+                <p class="llk_p lli" style="color: white;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quibusdam obcaecati cumque, doloremque inventore possimus consequuntur!</p>
             </div>
         </section>
         <section class="ddd5">
