--- a/index.html
+++ b/index.html
@@ -293,6 +293,29 @@
         .lli{
             padding-right: 35px;
         }
+        .bl2_h2{
+            font-size: 35pt;
+            padding-left: 35px;
+        }
+        .bl2_p{
+            font-size: 18pt;  padding-left: 35px;
+        }
+        .bl2_h21{
+    left: 33px;
+    margin-top: 406px;
+    font-size: 35pt;
+    padding-left: 35px;
+
+}
+.bl2_p1{
+
+    left: 33px;
+    margin-top: 406px;
+    font-size: 35pt;
+    padding-left: 35px;
+
+}
+
 
         @media screen and (max-width : 1280px) {
             body{
@@ -423,7 +446,71 @@
 .desc1 {
     width: 85%;
 }
+.img1337{
+    width: 364px;
+    height: 288px;
+    top: 0%;
+    right: -25px;
+
+}
+.bl2_h2{
+    position: absolute;
+    left: 33px;
+    margin-top: 406px;
+    font-size: 35pt;
+    padding-left: 35px;
+
+}
+.bl2_p{
+
+    position: absolute;
+    left: 33px;
+    margin-top: 406px;
+    font-size: 35pt;
+    padding-left: 35px;
+
+}
+.bl2_h21{
+    left: 33px;
+    margin-top: 0;
+    font-size: 35pt;
+    padding-left: 35px;
+
+}
+.bl2_p1{
+
+    left: 33px;
+    margin-top: 0;
+    font-size: 35pt;
+    padding-left: 35px;
+
+}
+.img555 {
+
+    width: 250px;
+    height: 250px;
+    margin-bottom: 32px;
+}
+.grid_patrn {
+    width: 98%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 15px;
+}
+.ddd6 {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(151, 151, 151);
+    margin-top: 50px;
+    padding-bottom: 35px;
+}
         }
+    
 
     </style>
 </head>
@@ -482,19 +569,19 @@
                 <p class="llk_p lli" style="color: white;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quibusdam obcaecati cumque, doloremque inventore possimus consequuntur!</p>
             </div>
         </section>
-        <section class="ddd5">
+        <!-- <section class="ddd5">
             <div class="bl1">
                 <div class="img1337"></div>
             </div>
             <div class="bl2">
-                <h2 style="font-size: 35pt;  padding-left: 35px;">Lorem ipsum dolor sit.</h2>
-                <p style="font-size: 18pt;  padding-left: 35px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti soluta nihil dicta aliquid ullam, repellat accusantium laboriosam porro pariatur quae, vel saepe culpa dignissimos, veniam voluptas suscipit tempore ipsa id!</p>
+                <h2 class="bl2_h2">Lorem ipsum dolor sit.</h2>
+                <p class="bl2_p" style="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti soluta nihil dicta aliquid ullam, repellat accusantium laboriosam porro pariatur quae, vel saepe culpa dignissimos, veniam voluptas suscipit tempore ipsa id!</p>
             </div>
-        </section>
+        </section> -->
         <section class="ddd3">
             <div class="llk">
-                <h2 style="font-size: 48pt;">Lorem ipsum dolor sit amet consectetur</h2>
-                <p style="font-size: 28pt;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque numquam praesentium recusandae.</p>
+                <h2 class="llk_h2">Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="llk_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque numquam praesentium recusandae.</p>
                 <!-- <button class="big_btn_black">Learn more</button> -->
                 <div class="img555"></div>
                 <i>Image from Mazepov</i>
@@ -502,8 +589,8 @@
         </section>
         <section class="ddd6">
             <div class="descr1337">
-                <h2 style="color: white; font-size: 34pt; text-align: center;">Lorem, ipsum dolor.</h2>
-                <p style="color: #fff; font-size: 24pt; text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, deserunt?</p>
+                <h2 class="bl2_h21" style="color: white; text-align: center;">Lorem, ipsum dolor.</h2>
+                <p class="bl2_p1" style="color: #fff; text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, deserunt?</p>
             </div>
             <div class="grid_patrn">
                 <div class="item_p i1"></div>
