--- a/index.html
+++ b/index.html
@@ -508,6 +508,13 @@
     background-color: rgb(151, 151, 151);
     margin-top: 50px;
     padding-bottom: 35px;
+    
+}
+.inp {
+    width: 250px;
+    height: 16px;
+    font-size: 12pt;
+    margin-bottom: 10px;
 }
         }
     
