--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         .step{
             width: 250px;
             height: 250px;
-            background-color: aqua;
+            background-color: whitesmoke;
         }
         header{
             display: flex;
@@ -302,7 +302,6 @@
         }
         .bl2_h21{
     left: 33px;
-    margin-top: 406px;
     font-size: 35pt;
     padding-left: 35px;
 
@@ -310,12 +309,19 @@
 .bl2_p1{
 
     left: 33px;
-    margin-top: 406px;
     font-size: 35pt;
     padding-left: 35px;
 
-}
+}/*<h2 class="llk_h2" style="font-size: 48pt;">Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="llk_p style="font-size: 28pt;">*/
 
+
+.llk_h2{
+    font-size: 48pt;
+}
+.llk_p{
+    font-size: 28pt;
+}
 
         @media screen and (max-width : 1280px) {
             body{
@@ -473,7 +479,7 @@
 .bl2_h21{
     left: 33px;
     margin-top: 0;
-    font-size: 35pt;
+    font-size: 28pt;
     padding-left: 35px;
 
 }
@@ -481,7 +487,7 @@
 
     left: 33px;
     margin-top: 0;
-    font-size: 35pt;
+    font-size: 18pt;
     padding-left: 35px;
 
 }
@@ -493,9 +499,11 @@
 }
 .grid_patrn {
     width: 98%;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
 }
 .ddd6 {
     position: relative;
@@ -516,6 +524,39 @@
     font-size: 12pt;
     margin-bottom: 10px;
 }
+.llk_h2{
+    font-size: 28pt;
+}
+.llk_p{
+    font-size: 24pt;
+}
+.ddd7{
+            position: relative;
+            width: 100%;
+            height: 800px;
+            flex-direction: column;
+
+            margin-top: 50px;
+
+        }
+                .step{
+            width: 92%;
+            height: 160px;
+            background-color: whitesmoke;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+        .img322{
+            width: 100%;
+            height: 520px;
+
+        }
+        .steps{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
         }
     
 
@@ -612,19 +653,21 @@
             <div class="steps">
                 <div class="step s1">
                     <h2 style="text-align: center;">1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h3 style="text-align: center;">Sample Text</h3>
+                    <p style="text-align: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </div>
                 <div class="step s2">
                     <h2 style="text-align: center;">2</h2>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3 style="text-align: center;">Let's Go</h3>
+                    <p style="text-align: center;">Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
             <div class="img322"></div>
         </section>
         <section class="ddd8">
             <div class="llk">
-                <h2 style="font-size: 48pt;">Lorem ipsum dolor sit amet consectetur</h2>
-                <p style="font-size: 28pt;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque numquam praesentium recusandae.</p>
+                <h2 class="llk_h2" >Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="llk_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque numquam praesentium recusandae.</p>
                 <button class="big_btn" style="margin-bottom: 25px;">Learn more</button>
                 </div>
         </section>
